--- a/styles/play.css
+++ b/styles/play.css
@@ -3,12 +3,10 @@
   padding: 0;
   box-sizing: border-box;
   font-family: Arial, Helvetica, sans-serif;
-  /* transition: all 0.1s ease; */
 }
 .background {
   height: 100vh;
   width: 100vw;
-  /* background-image:; */
   background: url("../images/background-img.png") no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
@@ -38,15 +36,33 @@
   color: black;
   top: 30%;
   left: 50%;
-  font-size: 4em;
+  font-size: 3em;
   transform: translate(-50%, -50%);
   text-align: center;
 }
 .messageStyle {
   background: white;
-  padding: 30px;
+  padding: 10px 100px;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
   border-radius: 5%;
+}
+.messageStyle > p {
+  margin: 10px auto;
+}
+.messageStyle > p:first-child {
+  color: red;
+}
+.messageStyle > p:nth-child(2) {
+  font-size: 0.6em;
+  color: green;
+  font-weight: bold;
+}
+.messageStyle > p:nth-child(3) {
+  font-size: 0.4em;
+}
+.messageStyle > p:nth-child(4) {
+  margin-top: 25px;
+  font-size: 0.6em;
 }
 .score {
   position: fixed;
