--- a/styles/play.css
+++ b/styles/play.css
@@ -61,6 +61,9 @@
   font-size: 0.4em;
 }
 .messageStyle > p:nth-child(4) {
+  font-size: 0.4em;
+}
+.messageStyle > p:nth-child(5) {
   margin-top: 25px;
   font-size: 0.6em;
 }
